Code/Gramatica_i_Tom/output/lingi_tomParser.java
// $ANTLR 3.4 C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g 2012-12-17 22:26:40

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class lingi_tomParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ELSE", "ESC_SEQ", "EXPONENT", "FALSE", "FLOAT", "FOR", "HEX_DIGIT", "ID", "IF", "INT", "OCTAL_ESC", "RETURN", "STRING", "TD_BOOL", "TD_CHAR", "TD_FLOAT", "TD_INT", "TD_STRING", "TD_VOID", "TRUE", "UNICODE_ESC", "WHILE", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'{'", "'||'", "'}'", "AddExpr1", "AddExpr2", "AddExprAux", "AndExpr1", "AndExpr2", "AndExprAux", "Args1", "Args2", "ArgsAux", "Argumentos", "Atribuicao", "BlocoMore", "BlocoOne", "Cabecalho1", "Cabecalho2", "ConstanteBool", "ConstanteChar", "ConstanteInt", "ConstanteString", "Corpo_Funcao1", "Corpo_Funcao2", "Declaracao", "DeclaracaoExpr1", "DeclaracaoExpr2", "Declaracoes", "EqualExpr1", "EqualExpr2", "EqualExprAux", "Expr", "FatorConstante", "FatorID", "FatorInvocacao", "ForExprAtribuicao", "ForExprExpr", "Fors", "Funcao", "Ifs1", "Ifs2", "IfsElse", "Invocacao", "MultExpr1", "MultExpr2", "MultExprAux", "NegationExpr", "NotExpr", "OrExpr1", "OrExpr2", "OrExprAux", "Programa", "Retorna", "Statement", "StatementAtribuicao", "StatementFors", "StatementIfs", "StatementInvocacao", "StatementRetorna", "StatementWhiles", "Whiles"
    };

    public static final int EOF=-1;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ELSE=6;
    public static final int ESC_SEQ=7;
    public static final int EXPONENT=8;
    public static final int FALSE=9;
    public static final int FLOAT=10;
    public static final int FOR=11;
    public static final int HEX_DIGIT=12;
    public static final int ID=13;
    public static final int IF=14;
    public static final int INT=15;
    public static final int OCTAL_ESC=16;
    public static final int RETURN=17;
    public static final int STRING=18;
    public static final int TD_BOOL=19;
    public static final int TD_CHAR=20;
    public static final int TD_FLOAT=21;
    public static final int TD_INT=22;
    public static final int TD_STRING=23;
    public static final int TD_VOID=24;
    public static final int TRUE=25;
    public static final int UNICODE_ESC=26;
    public static final int WHILE=27;
    public static final int WS=28;
    public static final int AddExpr1=50;
    public static final int AddExpr2=51;
    public static final int AddExprAux=52;
    public static final int AndExpr1=53;
    public static final int AndExpr2=54;
    public static final int AndExprAux=55;
    public static final int Args1=56;
    public static final int Args2=57;
    public static final int ArgsAux=58;
    public static final int Argumentos=59;
    public static final int Atribuicao=60;
    public static final int BlocoMore=61;
    public static final int BlocoOne=62;
    public static final int Cabecalho1=63;
    public static final int Cabecalho2=64;
    public static final int ConstanteBool=65;
    public static final int ConstanteChar=66;
    public static final int ConstanteInt=67;
    public static final int ConstanteString=68;
    public static final int Corpo_Funcao1=69;
    public static final int Corpo_Funcao2=70;
    public static final int Declaracao=71;
    public static final int DeclaracaoExpr1=72;
    public static final int DeclaracaoExpr2=73;
    public static final int Declaracoes=74;
    public static final int EqualExpr1=75;
    public static final int EqualExpr2=76;
    public static final int EqualExprAux=77;
    public static final int Expr=78;
    public static final int FatorConstante=79;
    public static final int FatorID=80;
    public static final int FatorInvocacao=81;
    public static final int ForExprAtribuicao=82;
    public static final int ForExprExpr=83;
    public static final int Fors=84;
    public static final int Funcao=85;
    public static final int Ifs1=86;
    public static final int Ifs2=87;
    public static final int IfsElse=88;
    public static final int Invocacao=89;
    public static final int MultExpr1=90;
    public static final int MultExpr2=91;
    public static final int MultExprAux=92;
    public static final int NegationExpr=93;
    public static final int NotExpr=94;
    public static final int OrExpr1=95;
    public static final int OrExpr2=96;
    public static final int OrExprAux=97;
    public static final int Programa=98;
    public static final int Retorna=99;
    public static final int Statement=100;
    public static final int StatementAtribuicao=101;
    public static final int StatementFors=102;
    public static final int StatementIfs=103;
    public static final int StatementInvocacao=104;
    public static final int StatementRetorna=105;
    public static final int StatementWhiles=106;
    public static final int Whiles=107;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public lingi_tomParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public lingi_tomParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return lingi_tomParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g"; }


    public static class programa_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "programa"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:1: programa : ( funcao )* -> ^( Programa ( funcao )* ) ;
    public final lingi_tomParser.programa_return programa() throws RecognitionException {
        lingi_tomParser.programa_return retval = new lingi_tomParser.programa_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        lingi_tomParser.funcao_return funcao1 =null;


        RewriteRuleSubtreeStream stream_funcao=new RewriteRuleSubtreeStream(adaptor,"rule funcao");
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:9: ( ( funcao )* -> ^( Programa ( funcao )* ) )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:11: ( funcao )*
            {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:11: ( funcao )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= TD_BOOL && LA1_0 <= TD_VOID)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:11: funcao
            	    {
            	    pushFollow(FOLLOW_funcao_in_programa278);
            	    funcao1=funcao();

            	    state._fsp--;

            	    stream_funcao.add(funcao1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: funcao
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 70:23: -> ^( Programa ( funcao )* )
            {
                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:26: ^( Programa ( funcao )* )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(Programa, "Programa")
                , root_1);

                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:70:37: ( funcao )*
                while ( stream_funcao.hasNext() ) {
                    adaptor.addChild(root_1, stream_funcao.nextTree());

                }
                stream_funcao.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "programa"


    public static class funcao_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "funcao"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:73:1: funcao : c1= cabecalho '{' c2= corpo_funcao '}' -> ^( Funcao $c1 $c2) ;
    public final lingi_tomParser.funcao_return funcao() throws RecognitionException {
        lingi_tomParser.funcao_return retval = new lingi_tomParser.funcao_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token char_literal2=null;
        Token char_literal3=null;
        lingi_tomParser.cabecalho_return c1 =null;

        lingi_tomParser.corpo_funcao_return c2 =null;


        Tree char_literal2_tree=null;
        Tree char_literal3_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleSubtreeStream stream_cabecalho=new RewriteRuleSubtreeStream(adaptor,"rule cabecalho");
        RewriteRuleSubtreeStream stream_corpo_funcao=new RewriteRuleSubtreeStream(adaptor,"rule corpo_funcao");
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:73:9: (c1= cabecalho '{' c2= corpo_funcao '}' -> ^( Funcao $c1 $c2) )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:73:11: c1= cabecalho '{' c2= corpo_funcao '}'
            {
            pushFollow(FOLLOW_cabecalho_in_funcao306);
            c1=cabecalho();

            state._fsp--;

            stream_cabecalho.add(c1.getTree());

            char_literal2=(Token)match(input,47,FOLLOW_47_in_funcao308);  
            stream_47.add(char_literal2);


            pushFollow(FOLLOW_corpo_funcao_in_funcao312);
            c2=corpo_funcao();

            state._fsp--;

            stream_corpo_funcao.add(c2.getTree());

            char_literal3=(Token)match(input,49,FOLLOW_49_in_funcao314);  
            stream_49.add(char_literal3);


            // AST REWRITE
            // elements: c1, c2
            // token labels: 
            // rule labels: retval, c1, c2
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_c1=new RewriteRuleSubtreeStream(adaptor,"rule c1",c1!=null?c1.tree:null);
            RewriteRuleSubtreeStream stream_c2=new RewriteRuleSubtreeStream(adaptor,"rule c2",c2!=null?c2.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 74:8: -> ^( Funcao $c1 $c2)
            {
                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:74:11: ^( Funcao $c1 $c2)
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(Funcao, "Funcao")
                , root_1);

                adaptor.addChild(root_1, stream_c1.nextTree());

                adaptor.addChild(root_1, stream_c2.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "funcao"


    public static class cabecalho_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "cabecalho"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:77:1: cabecalho : tipo ID '(' (a1= argumentos )? ')' -> {a1==null}? ^( Cabecalho1 tipo ID ) -> ^( Cabecalho2 tipo ID ( argumentos )? ) ;
    public final lingi_tomParser.cabecalho_return cabecalho() throws RecognitionException {
        lingi_tomParser.cabecalho_return retval = new lingi_tomParser.cabecalho_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token ID5=null;
        Token char_literal6=null;
        Token char_literal7=null;
        lingi_tomParser.argumentos_return a1 =null;

        lingi_tomParser.tipo_return tipo4 =null;


        Tree ID5_tree=null;
        Tree char_literal6_tree=null;
        Tree char_literal7_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_tipo=new RewriteRuleSubtreeStream(adaptor,"rule tipo");
        RewriteRuleSubtreeStream stream_argumentos=new RewriteRuleSubtreeStream(adaptor,"rule argumentos");
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:78:3: ( tipo ID '(' (a1= argumentos )? ')' -> {a1==null}? ^( Cabecalho1 tipo ID ) -> ^( Cabecalho2 tipo ID ( argumentos )? ) )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:78:5: tipo ID '(' (a1= argumentos )? ')'
            {
            pushFollow(FOLLOW_tipo_in_cabecalho347);
            tipo4=tipo();

            state._fsp--;

            stream_tipo.add(tipo4.getTree());

            ID5=(Token)match(input,ID,FOLLOW_ID_in_cabecalho349);  
            stream_ID.add(ID5);


            char_literal6=(Token)match(input,33,FOLLOW_33_in_cabecalho351);  
            stream_33.add(char_literal6);


            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:78:19: (a1= argumentos )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0 >= TD_BOOL && LA2_0 <= TD_VOID)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:78:19: a1= argumentos
                    {
                    pushFollow(FOLLOW_argumentos_in_cabecalho355);
                    a1=argumentos();

                    state._fsp--;

                    stream_argumentos.add(a1.getTree());

                    }
                    break;

            }


            char_literal7=(Token)match(input,34,FOLLOW_34_in_cabecalho358);  
            stream_34.add(char_literal7);


            // AST REWRITE
            // elements: tipo, argumentos, tipo, ID, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 78:36: -> {a1==null}? ^( Cabecalho1 tipo ID )
            if (a1==null) {
                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:78:51: ^( Cabecalho1 tipo ID )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(Cabecalho1, "Cabecalho1")
                , root_1);

                adaptor.addChild(root_1, stream_tipo.nextTree());

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }

            else // 79:8: -> ^( Cabecalho2 tipo ID ( argumentos )? )
            {
                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:79:11: ^( Cabecalho2 tipo ID ( argumentos )? )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(Cabecalho2, "Cabecalho2")
                , root_1);

                adaptor.addChild(root_1, stream_tipo.nextTree());

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:79:32: ( argumentos )?
                if ( stream_argumentos.hasNext() ) {
                    adaptor.addChild(root_1, stream_argumentos.nextTree());

                }
                stream_argumentos.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "cabecalho"


    public static class argumentos_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "argumentos"
    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:82:1: argumentos : declaracao ( ',' declaracao )* -> ^( Argumentos ( declaracao )+ ) ;
    public final lingi_tomParser.argumentos_return argumentos() throws RecognitionException {
        lingi_tomParser.argumentos_return retval = new lingi_tomParser.argumentos_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token char_literal9=null;
        lingi_tomParser.declaracao_return declaracao8 =null;

        lingi_tomParser.declaracao_return declaracao10 =null;


        Tree char_literal9_tree=null;
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleSubtreeStream stream_declaracao=new RewriteRuleSubtreeStream(adaptor,"rule declaracao");
        try {
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:83:3: ( declaracao ( ',' declaracao )* -> ^( Argumentos ( declaracao )+ ) )
            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:83:5: declaracao ( ',' declaracao )*
            {
            pushFollow(FOLLOW_declaracao_in_argumentos403);
            declaracao8=declaracao();

            state._fsp--;

            stream_declaracao.add(declaracao8.getTree());

            // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:83:16: ( ',' declaracao )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==37) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:83:17: ',' declaracao
            	    {
            	    char_literal9=(Token)match(input,37,FOLLOW_37_in_argumentos406);  
            	    stream_37.add(char_literal9);


            	    pushFollow(FOLLOW_declaracao_in_argumentos408);
            	    declaracao10=declaracao();

            	    state._fsp--;

            	    stream_declaracao.add(declaracao10.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: declaracao
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 83:34: -> ^( Argumentos ( declaracao )+ )
            {
                // C:\\Users\\Miguel\\Documents\\Uminho\\MEI\\ACS - Análise e Concepção de Software\\ATS - Análise e Transformação de Software\\Git\\ATS\\Code\\Gramatica_i_Tom\\lingi_tom.g:83:37: ^( Argumentos ( declaracao )+ )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(Argumentos, "Argumentos")
                , root_1);

                if ( !(stream_declaracao.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_declaracao.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaracao.nextTree());

                }
                stream_declaracao.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "argumentos"


    public static class corpo_funcao_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

